# lite-code-editor

./: .gitignore  README.md  README_en.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
docs/: DEVELOPMENT.md  组件使用指南.md
plugins/example-counter/: index.html  plugin.json
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/ExternalPluginLoader/: index.tsx
src/components/MermaidDiagram/: index.tsx
src/components/PluginSandbox/: index.tsx
src/components/PreviewEngine/: index.tsx
src/core/: plugin-manager.ts
src/core/types/: directive.ts  plugin.ts
src/plugins/: component-registry.ts  remark-directive-custom.ts
src/visualizers/algorithms/: GraphVisualizer.tsx  SortVisualizer.tsx  StringMatchVisualizer.tsx
src/visualizers/datastructures/: HashTableVisualizer.tsx  HeapVisualizer.tsx  LinkedListVisualizer.tsx  StackQueueVisualizer.tsx
src/visualizers/mindmap/: MindMapVisualizer.tsx  index.ts
src/visualizers/trees/: TreeVisualizer.tsx
