[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
chardetng = "0.1"
anyhow = "1.0"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

[profile.release]
# 优化启动速度和二进制大小
opt-level = "z"      # 优化大小，也利于启动速度
lto = true           # 链接时优化
codegen-units = 1    # 单个代码生成单元，更好的优化
panic = "abort"      # 减少 panic 处理代码
strip = true         # 移除符号信息

